fixed bottom div bug - no longer overlaps

--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@
     background-color: rgba(0, 0, 0, 0.88);
     /*background-color: rgba(0,0,0,0.63);*/
     color: lightsteelblue;
-    position: fixed;
+    position: relative;
     bottom: 0;
 }
 
